Alguns ajustes e mais sobre